<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">bf_seller</string>
    <string name="action_settings">Settings</string>

    <!-- welcome -->
    <string name="welcome_image_description">welcome image</string>
    <string name="app_version">1.0</string>

    <!-- setup -->
    <string name="login">登录</string>
    <string name="register">注册</string>

    <!-- register -->
    <string name="inputphonenumberdesc">请确认你的国家和地区并输入手机号</string>
    <string name="inputphonenumber">请输入手机号</string>
    <string name="action_next">下一步</string>
    <string name="phone_number_is_null">手机号不能为空</string>
    <string name="input_security_code">请填写验证码</string>
    <string name="security_code_desc">我们已发送验证码短信到这个号码</string>
    <string name="reget_security_code">重新获取验证码</string>
    <string name="waiting_get_security_code">秒后重新获取</string>
    <string name="inputpassword">请输入6-16位密码</string>
    <string name="inputpasswordagain">请再重复输入一遍</string>
    <string name="inputpassworddesc">请设置密码</string>
    <string name="password_is_null">密码不能为空</string>
    <string name="password_not_same">密码不一致</string>
    <string name="find_password">找回密码</string>

    <!-- main activity -->
    <string name="top_view_image_desc">title</string>
    <string name="bottom_view_message_image_desc">message</string>
    <string name="bottom_view_pagerind_image_desc">pager indicator</string>
    <string name="bottom_view_settings_image_desc">setting</string>
    <!-- shop activity -->
    <string name="shop_oprate_preview">预览</string>
    <string name="shop_oprate_copy">复制 </string>
    <string name="shop_oprate_share">分享</string>
    <string name="myshop">我的微店</string>
    

    <!-- network -->
    <string name="timeout">连接超时</string>
    <string name="unknown_network_error">未知网络错误</string>
    <string name="unknown_error_code">未知错误码</string>

</resources>