<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:gravity="center" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/welcome_image_description"
            android:gravity="center"
            android:src="@drawable/ic_setup_weidian_logo" >
        </ImageView>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center" >

        <Button
            android:id="@+id/register"
            android:layout_width="@dimen/login_button_width"
            android:layout_height="wrap_content"
            android:background="@drawable/register_shape_bg"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="@dimen/smallest_font_size" >
        </Button>

        <Button
            android:id="@+id/login"
            android:layout_width="@dimen/login_button_width"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/login_margin_top"
            android:background="@drawable/login_shape_bg"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/black"
            android:textSize="@dimen/smallest_font_size" >
        </Button>
    </LinearLayout>

</LinearLayout>