<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_kdwd_main_bg"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/top_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/top_view_image_desc"
            android:src="@drawable/ic_kdwd_income_weidian_logo" >
        </ImageView>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/middle_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4" >

        <android.support.v4.view.ViewPager
            android:id="@+id/viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" >
        </android.support.v4.view.ViewPager>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/bottom_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >

        <ImageView
            android:id="@+id/pagerindicator"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:contentDescription="@string/bottom_view_pagerind_image_desc"
            android:gravity="center"
            android:src="@drawable/ic_kdwd_first_point" >
        </ImageView>

        <ImageView
            android:id="@+id/message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignTop="@id/pagerindicator"
            android:contentDescription="@string/bottom_view_message_image_desc"
            android:gravity="center"
            android:paddingLeft="@dimen/main_message_padding"
            android:src="@drawable/ic_kdwd_message" >
        </ImageView>

        <ImageView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_alignTop="@id/pagerindicator"
            android:contentDescription="@string/bottom_view_settings_image_desc"
            android:gravity="center"
            android:paddingRight="@dimen/main_setting_padding"
            android:src="@drawable/ic_kdwd_setting_down" >
        </ImageView>
    </RelativeLayout>

</LinearLayout>