<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- TEXT View -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/login_input_height"
        android:layout_marginLeft="@dimen/login_margin_start"
        android:layout_marginRight="@dimen/login_margin_start"
        android:layout_marginTop="@dimen/login_margin_top"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/inputpassworddesc"
            android:textColor="@color/gray"
            android:textSize="@dimen/small_text_size" >
        </TextView>
    </LinearLayout>

    <!-- pass word -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin_start"
        android:layout_marginRight="@dimen/login_margin_start"
        android:layout_marginTop="@dimen/login_margin_top"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/inputpassword"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field"
            android:ems="12"
            android:focusableInTouchMode="true"
            android:hint="@string/inputpassword"
            android:inputType="textPassword"
            android:padding="5.0dip"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size" >
        </EditText>
        <EditText
            android:id="@+id/inputpassword2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/text_field"
            android:ems="12"
            android:focusableInTouchMode="true"
            android:hint="@string/inputpasswordagain"
            android:inputType="textPassword"
            android:padding="5.0dip"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size" >
        </EditText>
    </LinearLayout>

</LinearLayout>