<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <!-- TEXT View -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/login_margin_start"
        android:layout_marginRight="@dimen/login_margin_start"
        android:layout_marginTop="@dimen/register_margin_top"
        android:orientation="vertical" >

        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/register_margin_top"
            android:gravity="center"
            android:text="@string/security_code_desc"
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size" >
        </TextView>

        <TextView
            android:id="@+id/phonenumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/register_margin_top"
            android:gravity="center"
            android:text=""
            android:textColor="@color/black"
            android:textSize="@dimen/small_text_size"
            android:textStyle="bold" >
        </TextView>
    </LinearLayout>

    <!-- phone number -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="@dimen/login_input_height"
        android:layout_marginLeft="@dimen/login_margin_start"
        android:layout_marginRight="@dimen/login_margin_start"
        android:layout_marginTop="@dimen/register_margin_top"
        android:orientation="horizontal" >

        <EditText
            android:id="@+id/inputsecuritycode"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:background="@drawable/text_field"
            android:ems="12"
            android:focusableInTouchMode="true"
            android:hint="@string/input_security_code"
            android:inputType="numberSigned"
            android:padding="5.0dip"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size" >
        </EditText>

        <Button
            android:id="@+id/getsecritycode"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="@dimen/login_margin_start"
            android:layout_weight="1"
            android:background="@color/red"
            android:ems="12"
            android:focusableInTouchMode="true"
            android:hint="@string/reget_security_code"
            android:padding="5.0dip"
            android:textColor="@color/white"
            android:textSize="@dimen/small_text_size" >
        </Button>
    </LinearLayout>

</LinearLayout>