<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lv_header"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/shop_search_item_height"
            android:layout_marginLeft="@dimen/shop_item_margin_start"
            android:layout_marginRight="@dimen/shop_item_margin_start"
            android:layout_marginTop="@dimen/shop_item_margin_top"
            android:background="@color/grey"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <ImageView
                android:id="@+id/search_image"
                android:layout_width="@dimen/shop_search_image_width"
                android:layout_height="@dimen/shop_search_image_height"
                android:src="@drawable/ic_kdwd_icon_search" >
            </ImageView>

            <TextView
                android:id="@+id/search_tv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/shop_search_image_height" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/shopname_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/shop_shopname_item_height"
            android:layout_marginLeft="@dimen/shop_item_margin_start"
            android:layout_marginRight="@dimen/shop_item_margin_start"
            android:layout_marginTop="@dimen/shop_item_margin_top"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/shop_image"
                android:layout_width="@dimen/shop_head_image_width"
                android:layout_height="@dimen/shop_head_image_height"
                android:layout_marginTop="@dimen/shop_item_margin_top"
                android:src="@drawable/ic_kdwd_shop_image_def" >
            </ImageView>

            <TextView
                android:id="@+id/shop_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/shop_item_margin_top"
                android:text="@string/myshop"
                android:textColor="@color/black" >
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/shopoprate_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/shop_shopoprate_item_height"
            android:layout_marginLeft="@dimen/shop_item_margin_start"
            android:layout_marginRight="@dimen/shop_item_margin_start"
            android:layout_marginTop="@dimen/shop_item_margin_top"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="horizontal" >

            <LinearLayout
                android:id="@+id/shop_preview"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/shop_item_margin_top"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/shop_shopoprate_image_height"
                    android:layout_height="@dimen/shop_shopoprate_image_height"
                    android:layout_marginTop="@dimen/shop_item_margin_top"
                    android:src="@drawable/ic_kdwd_shop_preview" >
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/shop_item_margin_top"
                    android:text="@string/shop_oprate_preview"
                    android:textColor="@color/black" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/shop_copy"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/shop_item_margin_top"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/shop_shopoprate_image_height"
                    android:layout_height="@dimen/shop_shopoprate_image_height"
                    android:layout_marginTop="@dimen/shop_item_margin_top"
                    android:src="@drawable/ic_kdwd_shop_copy" >
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/shop_item_margin_top"
                    android:text="@string/shop_oprate_copy"
                    android:textColor="@color/black" >
                </TextView>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/shop_share"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/shop_item_margin_top"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical" >

                <ImageView
                    android:layout_width="@dimen/shop_shopoprate_image_height"
                    android:layout_height="@dimen/shop_shopoprate_image_height"
                    android:layout_marginTop="@dimen/shop_item_margin_top"
                    android:src="@drawable/ic_kdwd_shop_share" >
                </ImageView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/shop_item_margin_top"
                    android:text="@string/shop_oprate_share"
                    android:textColor="@color/black" >
                </TextView>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/shop_item_margin_top"
        android:background="@color/transparent">
    </View>

</LinearLayout>